# lm_orchestration

./: .env.ci  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish_to_pypi_on_release.yml  pytest_coverage.yml
genflow/: __version__.py  main.py
genflow/parsers/: input.py  output.py
genflow/tools/: run_generation_action.py  runnable_analysis.py
tests/: __init__.py  mock.py  test_end_to_end_qr_format.py  test_metadata_aggregation.py  test_orchestration.py  test_parsers.py  test_run_generation_action.py  test_runnable_actions.py
